Fix padding on mobile

--- a/src/styles/main.responsive.scss
+++ b/src/styles/main.responsive.scss
@@ -36,6 +36,6 @@
 @media (max-width: $mobile-breakpoint - 1px) {
   #root > header,
   #root > main {
-    padding: 0 1.5rem;
+    padding: 1.5rem;
   }
 }
